--- a/views/student.ejs
+++ b/views/student.ejs
@@ -4,10 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title>Result management system</title>
+    <link rel="stylesheet" href="homepage.css">
+    <title>Homepage</title>
 </head>
 <body>
-    <h1>Student page</h1>
-</body>
-</html>
+        
+            
+        
+        <div class="cont">
+
+            
+            <input type="text" id="en" placeholder="Enter Enrollment No"> 
+            
+            
+            
+            
+            <button id="b">submit</button>
+            
+            
+            <a href="">Admin Login</a>
+        </div>
+            
+        </body>
+        </html>  
