--- a/public/styles.css
+++ b/public/styles.css
@@ -1,3 +1,53 @@
-h1{
-    color: red;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    
 }
+
+body{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh; 
+    background: url(background.jpg);
+    background-size: cover;
+   
+    
+} 
+  
+
+
+.cont{
+    position: relative;
+    z-index: 5;
+}
+
+
+#b{
+    position: absolute;
+    top: 50px; 
+    right: 110px;
+    font-size: large;
+    padding: 5px;
+      
+}
+
+#en{
+    width: 250px;
+    height:  28px;
+    box-shadow: 2px 2px 2px rgb(236, 228, 228);
+    
+
+}
+
+ a{
+    position: absolute;
+     top: 100px;
+     right: 100px;
+    text-decoration: none;
+    font-size: larger;
+    color: rgb(42, 218, 145);
+      
+    
+ }
