--- a/public/homepage.css
+++ b/public/homepage.css
@@ -1,4 +1,39 @@
-*{
+body {
+  background-color: #d2faeb;
+  background-image: url("https://www.transparenttextures.com/patterns/45-degree-fabric-light.png");
+  /* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */
+}
+
+.form-style {
+  margin: 200px auto;
+  width: 300px;
+}
+
+.navbar {
+  padding-top: 15px;
+  border: 0;
+  border-radius: 0;
+  margin-bottom: 0;
+  font-size: 12px;
+  letter-spacing: 5px;
+}
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 10px;
+}
+
+.navbar li a {
+  margin-bottom: 16px;
+  color: #000;
+}
+
+.navbar li a:hover {
+  color: #1abc9c;
+}
+
+/* *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -51,4 +86,4 @@ body{
     color: rgb(42, 218, 145);
       
     
- }
+ } */
