--- a/views/student.ejs
+++ b/views/student.ejs
@@ -1,36 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
-      integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="homepage.css" />
-    <title>Homepage</title>
-  </head>
-  <body>
-    <header>
-      <nav class="navbar fixed-top" style="background-color: #f4f9f9">
-        <div class="container">
-          <div class="navbar-header">
-            <p class="navbar-brand">RESULT MANAGEMENT</p>
-          </div>
-          <ul class="navbar-nav">
-            <li id="home" class="nav-item">
-              <a class="nav-link" href="/admin">ADMIN LOGIN</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
-    </header>
+<%- include('partials/header'); -%>
     <main>
       <div class="form-style">
-        <img src="result.png" alt="home-image" class="center" />
+        <img src="/result.png" alt="home-image" class="center" />
         <form>
           <div class="form-group">
             <label for="inputEnrolment">Enrolment No.</label>
