--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -1,43 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
-      integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="homepage.css" />
-    <title>AdminPage</title>
-  </head>
-  <body>
-    <header>
-      <nav class="navbar fixed-top" style="background-color: #f4f9f9">
-        <div class="container">
-          <div class="navbar-header">
-            <p class="navbar-brand">RESULT MANAGEMENT</p>
-          </div>
-          <ul class="navbar-nav">
-            <li id="home" class="nav-item">
-              <a class="nav-link" href="/">HOME</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
-    </header>
+<%- include('partials/header'); -%>
     <main>
       <div class="form-style">
-        <img src="admin.png" alt="home-image" class="center" />
-        <form>
+        <img src="/admin.png" alt="home-image" class="center" />
+        <form method="post">
           <div class="form-group">
             <label for="inputEnrolment">User Name.</label>
             <input
               type="text"
               class="form-control"
-              id="inputEnrolment"
+              name="user"
               aria-describedby="emailHelp"
             />
           </div>
@@ -46,7 +17,7 @@
             <input
               type="password"
               class="form-control"
-              id="exampleInputPassword1"
+              name="password"
             />
           </div>
           <button type="submit" class="btn btn-dark" style="width: 125px">
