add manage students form

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -28,6 +28,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="/navbar.css" />
+    <link rel="stylesheet" href="/styles.css" />
     <link rel="stylesheet" href="/dashboard.css">
     <title>Dashboard</title>
   </head>
