--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,6 +10,7 @@
       integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="/styles.css" />
     <link rel="stylesheet" href="/navbar.css" />
     <title>Result</title>
   </head>
