--- a/views/students.ejs
+++ b/views/students.ejs
@@ -11,20 +11,20 @@
     />
     <link rel="stylesheet" href="/styles.css" />
     <link rel="stylesheet" href="/dashboardForms.css" />
-    <title>Dashboard | Classes</title>
+    <title>Dashboard | Students</title>
   </head>
   <body>
     <div class="form-style">
       <form method="post">
         <div class="form-group row">
           <label class="col-sm-2 col-form-label label-style"
-            >Enter Class id:
+            >Class id:
           </label>
           <div class="col-sm-10">
             <input
               type="text"
               class="form-control text-style"
-              placeholder="class id"
+              placeholder="Enter class id"
               name="cid"
             />
           </div>
@@ -32,50 +32,34 @@
 
         <div class="form-group row">
           <label class="col-sm-2 col-form-label label-style"
-            >Enter Branch</label
+            >Name</label
           >
           <div class="col-sm-10">
             <input
               type="text"
               class="form-control text-style"
-              placeholder="branch"
-              name="branch"
+              placeholder="Enter Name"
+              name="name"
             />
           </div>
         </div>
         <div class="form-group row">
-          <label class="col-sm-2 col-form-label label-style">Enter Sem</label>
+          <label class="col-sm-2 col-form-label label-style">Enrolment_no</label>
           <div class="col-sm-10">
             <input
-              type="text"
+              type="number"
               class="form-control text-style"
-              placeholder="Semester"
-              name="sem"
+              placeholder="Enter enrolment no"
+              name="enrolment_no"
             />
           </div>
         </div>
-        <div class="form-group row">
-          <label class="col-sm-2 col-form-label label-style"
-            >Enter Subjects</label
-          >
-          <div class="col-sm-10">
-            <input
-              type="text"
-              class="form-control text-style"
-              placeholder="Enter subjects"
-              name="subjects"
-              spellcheck="false"
-            />
-            <small class="form-text text-muted"
-              >(Comma seperated)</small
-            >
-          </div>
-        </div>
+        
 
         <div class="form-group row">
           <div class="col-sm-10">
             <button type="submit" class="btn btn-dark" style="width: 125px; margin-top: 25px;">
-              Add Class
+              Add Student
             </button>
           </div>
         </div>
