--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -86,7 +86,7 @@
       <div class="card" style="width: 18rem;">
         <img class="card-img-top" src="/dashboard_result.svg" alt="image">
         <div class="card-body">
-          <a href="/dashboard/results" class="btn btn-dark"><i class="fa-solid fa-square-poll-vertical"></i> Manage Results</a>
+          <a href="/dashboard/results" class="btn btn-dark" id="result"><i class="fa-solid fa-square-poll-vertical"></i> Manage Results</a>
         </div>
       </div>
     </div>
