--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -12,7 +12,7 @@
     />
     <link rel="stylesheet" href="/styles.css" />
     <link rel="stylesheet" href="/navbar.css" />
-    <title>Result</title>
+    <title>HOME</title>
   </head>
   <body>
     <header>
