--- a/views/result.ejs
+++ b/views/result.ejs
@@ -22,7 +22,7 @@
             >Select Class Id</label
           >
           <div class="col-sm-10">
-            <select class="text-style myDropDown" id="dropdown-classid">
+            <select class="text-style myDropDown" id="dropdown-classid" name="class_id">
               <option value="">- Select Class Id -</option>
               <% classes.forEach(function(classId){ %>
               <option><%- classId._id %></option>
