--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -8,7 +8,7 @@
             <input
               type="text"
               class="form-control"
-              name="user"
+              name="username"
               aria-describedby="emailHelp"
             />
           </div>
