--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -60,6 +60,9 @@
             <li class="nav-item">
               <a class="nav-link" href="/dashboard/result">Manage Results</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/logout">Log Out</a>
+            </li>
           </ul>
         </div>
       </nav>
