add search result

--- a/views/student.ejs
+++ b/views/student.ejs
@@ -2,13 +2,13 @@
     <main>
       <div class="form-style">
         <img src="/result.png" alt="home-image" class="center" />
-        <form>
+        <form method="post">
           <div class="form-group">
             <label for="inputEnrolment">Enrolment No.</label>
             <input
               type="text"
               class="form-control"
-              id="inputEnrolment"
+              name="enrolment_no"
               aria-describedby="emailHelp"
             />
             <small class="form-text text-muted"
