change student Result page and minor changes

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -1,7 +1,7 @@
 <%- include('partials/header'); -%>
     <main>
       <div class="form-style">
-        <img src="/admin.png" alt="home-image" class="center" />
+        <img src="/assets/admin.png" alt="home-image" class="center" />
         <form method="post">
           <div class="form-group">
             <label for="inputEnrolment">User Name.</label>
