--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -27,9 +27,9 @@
       integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="/navbar.css" />
-    <link rel="stylesheet" href="/styles.css" />
-    <link rel="stylesheet" href="/dashboard.css">
+    <link rel="stylesheet" href="/css/navbar.css" />
+    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="/css/dashboard.css">
     <title>Dashboard</title>
   </head>
   <body>
@@ -71,7 +71,7 @@
       <div class="feature-section row">
         <div class="admin-features col-md-12 col-lg-4">
       <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="/dashboard_student.svg" alt="image">
+        <img class="card-img-top" src="assets/dashboard_student.svg" alt="image">
         <div class="card-body">
           <a href="/dashboard/students" class="btn btn-dark"><i class="fa-solid fa-users"></i> Manage Students</a>
         </div>
@@ -79,7 +79,7 @@
     </div>
     <div class="admin-features col-md-12 col-lg-4">
       <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="/dashboard_class.svg" alt="image">
+        <img class="card-img-top" src="/assets/dashboard_class.svg" alt="image">
         <div class="card-body">
           <a href="/dashboard/classes" class="btn btn-dark"><i class="fa-solid fa-landmark"></i> Manage Classes</a>
         </div>
@@ -87,7 +87,7 @@
     </div>
     <div class="admin-features col-md-12 col-lg-4">
       <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="/dashboard_result.svg" alt="image">
+        <img class="card-img-top" src="/assets/dashboard_result.svg" alt="image">
         <div class="card-body">
           <a href="/dashboard/results" class="btn btn-dark" id="result"><i class="fa-solid fa-square-poll-vertical"></i> Manage Results</a>
         </div>
