--- a/views/student.ejs
+++ b/views/student.ejs
@@ -1,8 +1,8 @@
 <%- include('partials/header'); -%>
     <main>
       <div class="form-style">
-        <img src="/result.png" alt="home-image" class="center" />
-        <form method="post">
+        <img src="/assets/result.png" alt="home-image" class="center" />
+        <form method="post" action="/result">
           <div class="form-group">
             <label for="inputEnrolment">Enrolment No.</label>
             <input
