--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,8 +10,8 @@
       integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/styles.css" />
-    <link rel="stylesheet" href="/navbar.css" />
+    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="/css/navbar.css" />
     <title>HOME</title>
   </head>
   <body>
