--- a/views/class.ejs
+++ b/views/class.ejs
@@ -11,6 +11,7 @@
     />
     <link rel="stylesheet" href="/css/styles.css" />
     <link rel="stylesheet" href="/css/dashboardForms.css" />
+    <link rel="stylesheet" href="/css/modal.css" />
     <title>Dashboard | Classes</title>
   </head>
   <body>
@@ -74,12 +75,42 @@
 
         <div class="form-group row">
           <div class="col-sm-10">
-            <button type="submit" class="btn btn-dark" style="width: 125px; margin-top: 25px;">
+            <button type="submit" class="btn btn-dark" style="width: 125px; margin-top: 10px;">
               Add Class
             </button>
           </div>
         </div>
       </form>
     </div>
+    <div class="container" style="margin-top: 70px;">
+      <table class="table table-hover">
+        <thead class="thead-dark">
+          <tr>
+            <th scope="col">NO.</th>
+            <th scope="col">Class id</th>
+            <th scope="col">Branch</th>
+            <th scope="col">Sem</th>
+            <th scope="col">Subjects</th>
+          </tr>
+        </thead>
+        <tbody id="table-body">
+    
+        </tbody>
+      </table>
+    </div>
+    <div id="myModal" class="modal">
+
+      <!-- Modal content -->
+      <div class="modal-content">
+        <div class="modal-header">
+          <h2>Subjects</h2>
+          <span class="close">&times;</span>
+        </div>
+        <div class="modal-body" id="subjects">
+        </div>
+      </div>
+    
+    </div>
+    <script src="/js/classDashboard.js"></script>
   </body>
 </html>
