add student table

--- a/views/class.ejs
+++ b/views/class.ejs
@@ -9,6 +9,7 @@
       integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn"
       crossorigin="anonymous"
     />
+    <script src="https://kit.fontawesome.com/05332581fb.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/css/styles.css" />
     <link rel="stylesheet" href="/css/dashboardForms.css" />
     <link rel="stylesheet" href="/css/modal.css" />
@@ -91,6 +92,7 @@
             <th scope="col">Branch</th>
             <th scope="col">Sem</th>
             <th scope="col">Subjects</th>
+            <th scope="col">Action</th>
           </tr>
         </thead>
         <tbody id="table-body">
