--- a/views/result.ejs
+++ b/views/result.ejs
@@ -36,7 +36,7 @@
           >
           <div class="col-sm-10">
             <input
-              type="number"
+              type="text"
               class="form-control text-style"
               placeholder="Enter enrolment no"
               name="enrolment_no"
