delete result added

--- a/views/class.ejs
+++ b/views/class.ejs
@@ -113,6 +113,11 @@
       </div>
     
     </div>
+    <script>
+      if (window.history.replaceState) {
+        window.history.replaceState(null, null, window.location.href);
+      }
+    </script>
     <script src="/js/classDashboard.js"></script>
   </body>
 </html>
