--- a/views/students.ejs
+++ b/views/students.ejs
@@ -82,6 +82,11 @@
         </tbody>
       </table>
     </div>
+    <script>
+      if (window.history.replaceState) {
+        window.history.replaceState(null, null, window.location.href);
+      }
+    </script>
     <script src="/js/studentDashboard.js"></script>
   </body>
 </html>
