--- a/views/result.ejs
+++ b/views/result.ejs
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="/css/styles.css" />
     <link rel="stylesheet" href="/css/dashboardForms.css" />
     <link rel="stylesheet" href="/css/modal.css" />
-    
+
     <title>Dashboard | results</title>
   </head>
   <body>
@@ -24,7 +24,11 @@
             >Select Class Id</label
           >
           <div class="col-sm-10">
-            <select class="text-style myDropDown" id="dropdown-classid" name="class_id">
+            <select
+              class="text-style myDropDown"
+              id="dropdown-classid"
+              name="class_id"
+            >
               <option value="">- Select Class Id -</option>
               <% classes.forEach(function(classId){ %>
               <option><%- classId._id %></option>
@@ -59,7 +63,7 @@
         </div>
       </form>
     </div>
-    <div class="container" style="margin-top: 70px;">
+    <div class="container" style="margin-top: 70px">
       <table class="table table-hover">
         <thead class="thead-dark">
           <tr>
@@ -71,25 +75,31 @@
             <th scope="col">Action</th>
           </tr>
         </thead>
-        <tbody id="table-body">
-    
-        </tbody>
+        <tbody id="table-body"></tbody>
       </table>
     </div>
     <div id="myModal" class="modal">
-
       <!-- Modal content -->
       <div class="modal-content">
         <div class="modal-header">
-          <h2>Result <p id = "sem"></p></h2>
+          <h2>
+            Result
+            <p id="sem"></p>
+          </h2>
           <span class="close">&times;</span>
         </div>
-        <div class="modal-body" id="result">
-        </div>
+        <div class="modal-body" id="result"></div>
       </div>
-    
     </div>
-    <script src="/js/resultDashboard.js"></script> 
-    <script src="https://kit.fontawesome.com/05332581fb.js" crossorigin="anonymous"></script>
+    <script>
+      if (window.history.replaceState) {
+        window.history.replaceState(null, null, window.location.href);
+      }
+    </script>
+    <script src="/js/resultDashboard.js"></script>
+    <script
+      src="https://kit.fontawesome.com/05332581fb.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
