add pagination to table

--- a/views/studentResult.ejs
+++ b/views/studentResult.ejs
@@ -64,7 +64,7 @@
       <div class="container">
         <button
           type="button"
-          class="btn btn-outline-dark"
+          class="btn btn-outline-dark d-print-none"
           style="margin-left: 130px; margin-top: 10px"
           id="searchResult"
         >
