--- a/views/result.ejs
+++ b/views/result.ejs
@@ -1,106 +1,136 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/fomantic-ui/2.8.8/semantic.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.datatables.net/1.11.5/css/dataTables.semanticui.min.css"
+    />
 
-  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"
-    integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2"
-    crossorigin="anonymous"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
+      integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="/css/dashboardForms.css" />
+    <link rel="stylesheet" href="/css/modal.css" />
 
+    <title>Dashboard | results</title>
+  </head>
 
-  <script src="http://code.jquery.com/jquery-3.3.1.min.js"
-    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-
-
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fomantic-ui/2.8.8/semantic.min.css">
-  <link rel="stylesheet" href="https://cdn.datatables.net/1.11.5/css/dataTables.semanticui.min.css">
-
-
-  <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
-  <script src="https://cdn.datatables.net/1.11.5/js/dataTables.semanticui.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/fomantic-ui/2.8.8/semantic.min.js"></script>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
-    integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous" />
-  <link rel="stylesheet" href="/css/styles.css" />
-  <link rel="stylesheet" href="/css/dashboardForms.css" />
-  <link rel="stylesheet" href="/css/modal.css" />
-
-  <title>Dashboard | results</title>
-</head>
-
-<body>
-  <p class="continue"></p>
-  <div class="form-style">
-    <form method="post" id="result-form">
-      <div class="form-group row">
-        <label class="col-sm-2 col-form-label label-style">Select Class Id</label>
-        <div class="col-sm-10">
-          <select class="text-style myDropDown" id="dropdown-classid" name="class_id">
-            <option value="">- Select Class Id -</option>
-            <% classes.forEach(function(classId){ %>
-              <option>
-                <%- classId._id %>
-              </option>
+  <body>
+    <p class="continue"></p>
+    <div class="form-style">
+      <form method="post" id="result-form">
+        <div class="form-group row">
+          <label class="col-sm-2 col-form-label label-style"
+            >Select Class Id</label
+          >
+          <div class="col-sm-10">
+            <select
+              class="text-style myDropDown"
+              id="dropdown-classid"
+              name="class_id"
+            >
+              <option value="">- Select Class Id -</option>
+              <% classes.forEach(function(classId){ %>
+              <option><%- classId._id %></option>
               <% }); %>
-          </select>
+            </select>
+          </div>
         </div>
-      </div>
-      <div class="form-group row">
-        <label class="col-sm-2 col-form-label label-style">Enrolment_no</label>
-        <div class="col-sm-10">
-          <input type="text" class="form-control text-style" placeholder="Enter enrolment no" name="enrolment_no" />
+        <div class="form-group row">
+          <label class="col-sm-2 col-form-label label-style"
+            >Enrolment_no</label
+          >
+          <div class="col-sm-10">
+            <input
+              type="text"
+              class="form-control text-style"
+              placeholder="Enter enrolment no"
+              name="enrolment_no"
+            />
+          </div>
         </div>
-      </div>
 
-      <div class="form-group row">
-        <div class="col-sm-10">
-          <button type="submit" class="btn btn-dark" style="width: 125px; margin-top: 25px">
-            Add Result
-          </button>
+        <div class="form-group row">
+          <div class="col-sm-10">
+            <button
+              type="submit"
+              class="btn btn-dark"
+              style="width: 125px; margin-top: 25px"
+            >
+              Add Result
+            </button>
+          </div>
         </div>
-      </div>
-    </form>
-  </div>
-  <div class="container" style="margin-top: 70px">
-    <table class="table table-hover" id="result-table">
-      <thead class="thead-dark">
-        <tr>
-          <th scope="col">NO.</th>
-          <th scope="col">Enrolment_no</th>
-          <th scope="col">Class id</th>
-          <th scope="col">Name</th>
-          <th scope="col">Results</th>
-          <th scope="col">Action</th>
-        </tr>
-      </thead>
-      <tbody id="table-body"></tbody>
-    </table>
-  </div>
-  <div id="myModal" class="modal">
-    <!-- Modal content -->
-    <div class="modal-content">
-      <div class="modal-header">
-        <h2>
-          Result
-          <p id="sem"></p>
-        </h2>
-        <span class="close">&times;</span>
-      </div>
-      <div class="modal-body" id="result"></div>
+      </form>
     </div>
-  </div>
+    <div class="container" style="margin-top: 70px">
+      <table class="table table-hover" id="result-table">
+        <thead class="thead-dark">
+          <tr>
+            <th scope="col">NO.</th>
+            <th scope="col">Enrolment_no</th>
+            <th scope="col">Class id</th>
+            <th scope="col">Name</th>
+            <th scope="col">Results</th>
+            <th scope="col">Action</th>
+          </tr>
+        </thead>
+        <tbody id="table-body"></tbody>
+      </table>
+    </div>
+    <div id="myModal" class="modal">
+      <!-- Modal content -->
+      <div class="modal-content">
+        <div class="modal-header">
+          <h2>
+            Result
+            <p id="sem"></p>
+          </h2>
+          <span class="close">&times;</span>
+        </div>
+        <div class="modal-body" id="result"></div>
+      </div>
+    </div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"
+      integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2"
+      crossorigin="anonymous"
+    ></script>
 
-  <script src="/js/resultDashboard.js"></script>
-  <script src="https://kit.fontawesome.com/05332581fb.js" crossorigin="anonymous"></script>
-</body>
-
+    <script
+      src="http://code.jquery.com/jquery-3.3.1.min.js"
+      integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.11.5/js/dataTables.semanticui.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fomantic-ui/2.8.8/semantic.min.js"></script>
+    <script src="/js/resultDashboard.js"></script>
+    <script
+      src="https://kit.fontawesome.com/05332581fb.js"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
