--- a/views/students.ejs
+++ b/views/students.ejs
@@ -3,13 +3,21 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/fomantic-ui/2.8.8/semantic.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.datatables.net/1.11.5/css/dataTables.semanticui.min.css"
+    />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
       integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn"
       crossorigin="anonymous"
     />
-    <script src="https://kit.fontawesome.com/05332581fb.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/css/styles.css" />
     <link rel="stylesheet" href="/css/dashboardForms.css" />
     <title>Dashboard | Students</title>
@@ -18,9 +26,7 @@
     <div class="form-style">
       <form method="post">
         <div class="form-group row">
-          <label class="col-sm-2 col-form-label label-style"
-            >Class id:
-          </label>
+          <label class="col-sm-2 col-form-label label-style">Class id: </label>
           <div class="col-sm-10">
             <input
               type="text"
@@ -32,9 +38,7 @@
         </div>
 
         <div class="form-group row">
-          <label class="col-sm-2 col-form-label label-style"
-            >Name</label
-          >
+          <label class="col-sm-2 col-form-label label-style">Name</label>
           <div class="col-sm-10">
             <input
               type="text"
@@ -45,7 +49,9 @@
           </div>
         </div>
         <div class="form-group row">
-          <label class="col-sm-2 col-form-label label-style">Enrolment_no</label>
+          <label class="col-sm-2 col-form-label label-style"
+            >Enrolment_no</label
+          >
           <div class="col-sm-10">
             <input
               type="text"
@@ -55,19 +61,22 @@
             />
           </div>
         </div>
-        
 
         <div class="form-group row">
           <div class="col-sm-10">
-            <button type="submit" class="btn btn-dark" style="width: 125px; margin-top: 25px;">
+            <button
+              type="submit"
+              class="btn btn-dark"
+              style="width: 125px; margin-top: 25px"
+            >
               Add Student
             </button>
           </div>
         </div>
       </form>
     </div>
-    <div class="container" style="margin-top: 70px;">
-      <table class="table table-hover">
+    <div class="container" style="margin-top: 70px">
+      <table class="table table-hover" id="student-table">
         <thead class="thead-dark">
           <tr>
             <th scope="col">NO.</th>
@@ -77,16 +86,37 @@
             <th scope="col">Action</th>
           </tr>
         </thead>
-        <tbody id="table-body">
-    
-        </tbody>
+        <tbody id="table-body"></tbody>
       </table>
     </div>
-    <script>
-      if (window.history.replaceState) {
-        window.history.replaceState(null, null, window.location.href);
-      }
-    </script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"
+      integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2"
+      crossorigin="anonymous"
+    ></script>
+
+    <script
+      src="https://kit.fontawesome.com/05332581fb.js"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="http://code.jquery.com/jquery-3.3.1.min.js"
+      integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.11.5/js/dataTables.semanticui.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fomantic-ui/2.8.8/semantic.min.js"></script>
     <script src="/js/studentDashboard.js"></script>
   </body>
 </html>
