--- a/views/result.ejs
+++ b/views/result.ejs
@@ -28,7 +28,6 @@
   </head>
 
   <body>
-    <p class="continue"></p>
     <div class="form-style">
       <form method="post" id="result-form">
         <div class="form-group row">
@@ -75,6 +74,12 @@
         </div>
       </form>
     </div>
+    <div class="form-style">
+      <button class="btn btn-dark" style="width: 125px" id="fileBtn">
+        Upload File
+      </button>
+    </div>
+
     <div class="container" style="margin-top: 70px">
       <table class="table table-hover" id="result-table">
         <thead class="thead-dark">
@@ -98,11 +103,52 @@
             Result
             <p id="sem"></p>
           </h2>
-          <span class="close">&times;</span>
+          <span class="close" id="resultSpan">&times;</span>
         </div>
         <div class="modal-body" id="result"></div>
       </div>
     </div>
+    <div id="fileModal" class="modal">
+      <!-- Modal content -->
+      <div class="file-modal-content">
+        <div class="modal-header">
+          <h2>
+            Upload File
+            <p id="sem"></p>
+          </h2>
+          <span class="close" id="fileSpan">&times;</span>
+        </div>
+        <div class="modal-body">
+          <form
+            action="/excel/upload"
+            enctype="multipart/form-data"
+            method="post"
+          >
+            <div class="custom-file" style="margin-top: 15px;">
+              <input
+                type="file"
+                class="custom-file-input"
+                id="customFile"
+                name="csv"
+                accept="text/csv"
+                style="cursor: pointer;"
+              />
+              <label class="custom-file-label" for="customFile" style="cursor: pointer;"
+                >Choose file</label
+              >
+            </div>
+            <button
+              type="submit"
+              class="btn btn-dark"
+              style="width: 125px; margin-top: 15px; margin-bottom: 15px"
+            >
+              Upload
+            </button>
+          </form>
+        </div>
+      </div>
+    </div>
+
     <script
       src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
@@ -132,5 +178,7 @@
       src="https://kit.fontawesome.com/05332581fb.js"
       crossorigin="anonymous"
     ></script>
+    <script src="https://cdn.jsdelivr.net/npm/bs-custom-file-input/dist/bs-custom-file-input.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bs-custom-file-input/dist/bs-custom-file-input.min.js"></script>
   </body>
 </html>
