add back button

--- a/views/class.ejs
+++ b/views/class.ejs
@@ -90,6 +90,7 @@
             >
               Add Class
             </button>
+            <input type="button"  class="btn btn-outline-dark"value="Go back"  style="width: 125px; margin-top: 10px;margin-left: 5px;" onclick="history.back()">
           </div>
         </div>
       </form>
