--- a/views/result.ejs
+++ b/views/result.ejs
@@ -70,6 +70,7 @@
             >
               Add Result
             </button>
+            <input type="button"  class="btn btn-outline-dark"value="Go back"  style="width: 125px; margin-top: 25px;margin-left: 5px;" onclick="history.back()">
           </div>
         </div>
       </form>
