--- a/views/class.ejs
+++ b/views/class.ejs
@@ -90,7 +90,12 @@
             >
               Add Class
             </button>
-            <input type="button"  class="btn btn-outline-dark"value="Go back"  style="width: 125px; margin-top: 10px;margin-left: 5px;" onclick="history.back()">
+            <a
+              href="/dashboard"
+              class="btn btn-outline-dark"
+              style="width: 125px; margin-top: 10px; margin-left: 5px"
+              >Go Back</a
+            >
           </div>
         </div>
       </form>
