--- a/views/students.ejs
+++ b/views/students.ejs
@@ -20,7 +20,7 @@
     />
     <link rel="stylesheet" href="/css/styles.css" />
     <link rel="stylesheet" href="/css/dashboardForms.css" />
-    <link rel="stylesheet" href="/css/modal.css">
+    <link rel="stylesheet" href="/css/modal.css" />
     <title>Dashboard | Students</title>
   </head>
   <body>
@@ -72,7 +72,12 @@
             >
               Add Student
             </button>
-            <input type="button"  class="btn btn-outline-dark"value="Go back"  style="width: 125px; margin-top: 25px;margin-left: 5px;" onclick="history.back()">
+            <a
+              href="/dashboard"
+              class="btn btn-outline-dark"
+              style="width: 125px; margin-top: 25px; margin-left: 5px"
+              >Go Back</a
+            >
           </div>
         </div>
       </form>
