--- a/views/class.ejs
+++ b/views/class.ejs
@@ -37,6 +37,7 @@
               class="form-control text-style"
               placeholder="class id"
               name="cid"
+              required
             />
           </div>
         </div>
@@ -51,6 +52,7 @@
               class="form-control text-style"
               placeholder="branch"
               name="branch"
+              required
             />
           </div>
         </div>
@@ -62,6 +64,7 @@
               class="form-control text-style"
               placeholder="Semester"
               name="sem"
+              required
             />
           </div>
         </div>
@@ -76,6 +79,7 @@
               placeholder="Enter subjects"
               name="subjects"
               spellcheck="false"
+              required
             />
             <small class="form-text text-muted">(Comma seperated)</small>
           </div>
