--- a/views/result.ejs
+++ b/views/result.ejs
@@ -39,6 +39,7 @@
               class="text-style myDropDown"
               id="dropdown-classid"
               name="class_id"
+              required
             >
               <option value="">- Select Class Id -</option>
               <% classes.forEach(function(classId){ %>
@@ -57,6 +58,7 @@
               class="form-control text-style"
               placeholder="Enter enrolment no"
               name="enrolment_no"
+              required
             />
           </div>
         </div>
