--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -10,6 +10,7 @@
               class="form-control"
               name="username"
               aria-describedby="emailHelp"
+              required
             />
           </div>
           <div class="form-group">
@@ -18,6 +19,7 @@
               type="password"
               class="form-control"
               name="password"
+              required
             />
           </div>
           <button type="submit" class="btn btn-dark" style="width: 125px">
