--- a/views/student.ejs
+++ b/views/student.ejs
@@ -1,8 +1,8 @@
 <%- include('partials/header'); -%>
     <main>
       <div class="form-style">
-        <img src="/assets/result.png" alt="home-image" class="center" />
-        <form method="post" action="/result">
+        <img src="/assets/result.png"  alt="home-image" class="center" />
+        <form method="post" name="myForm"  action="/result" >
           <div class="form-group">
             <label for="inputEnrolment">Enrolment No.</label>
             <input
@@ -10,16 +10,25 @@
               class="form-control"
               name="enrolment_no"
               aria-describedby="emailHelp"
+              required
+            
             />
             <small class="form-text text-muted"
               >Search your results by entering your enrolment no.</small
             >
           </div>
-          <button type="submit" class="btn btn-dark" style="width: 125px">
+          
+        
+          <button type="submit" name="fname" class="btn btn-dark" style="width: 125px">
             Search
           </button>
         </form>
       </div>
     </main>
+    <script>
+      if(window.history.replaceState){
+        window.history.replaceState(null,null,window.location.href);
+      }
+    </script>
   </body>
 </html>
