--- a/views/students.ejs
+++ b/views/students.ejs
@@ -34,6 +34,7 @@
               class="form-control text-style"
               placeholder="Enter class id"
               name="cid"
+              required
             />
           </div>
         </div>
@@ -46,6 +47,7 @@
               class="form-control text-style"
               placeholder="Enter Name"
               name="name"
+              required
             />
           </div>
         </div>
@@ -59,6 +61,7 @@
               class="form-control text-style"
               placeholder="Enter enrolment no"
               name="enrolment_no"
+              required
             />
           </div>
         </div>
