--- a/views/studentResult.ejs
+++ b/views/studentResult.ejs
@@ -35,11 +35,15 @@
     <section style="margin-top: 100px">
       <div class="container">
         <p class="text-sm-start">Name : <%= studentName %></p>
-        <p class="text-xl-start">Enrolment Number: <span id="enrolment_no"><%= enrolment_no %></span></p>
+        <p class="text-xl-start">
+          Enrolment Number: <span id="enrolment_no"><%= enrolment_no %></span>
+        </p>
         <p class="text-xl-start">
           Semester: <span id="sem"><%= studentSem %></span>
         </p>
-        <p class="text-xl-start">Branch : <span id="branch"><%= studentBranch %></span></p>
+        <p class="text-xl-start">
+          Branch : <span id="branch"><%= studentBranch %></span>
+        </p>
       </div>
       <br />
       <div class="container">
@@ -82,23 +86,55 @@
               <th scope="col">OUT OF</th>
             </tr>
           </thead>
+          <% var status = true %> <% var percentage,sum = 0,sym =' %'; %> <% var
+          cnt = 1 %>
           <tbody id="table-body">
-            <% var cnt = 1 %> <% studentResult.forEach(function(result){ %>
+            <% studentResult.forEach(function(result){ %> <% sum +=
+            result.score; %>
             <tr>
               <th scope="row"><%= cnt++ %></th>
               <td><%= result.name %></td>
+              <% if(result.score <= 28) { %>
+              <td style="color: rgb(237, 90, 90)"><%= result.score %></td>
+              <% status = false %> <% } else{ %>
               <td><%= result.score %></td>
+              <% } %>
               <td>70</td>
             </tr>
             <% }); %>
           </tbody>
         </table>
+        <% percentage = (sum / (70 * (cnt - 1))) * 100 %>
+        <div class="container" style="margin-top: 50px; text-align: end; font-weight: 700;">
+          <p>Percentage : <%= percentage.toFixed(2) %><%= sym %></p>
+          <% if(status){ %>
+          <p
+            style="
+              background-color: rgb(107, 241, 112);
+              text-align: center;
+              color: #fff;
+            "
+          >
+            Status : Pass
+          </p>
+          <% } else { %>
+          <p
+            style="
+              background-color: rgb(237, 90, 90);
+              text-align: center;
+              color: #fff;
+            "
+          >
+            Status : Fail
+          </p>
+          <% } %>
+        </div>
 
         <button
           type="button"
           class="btn btn-outline-dark d-print-none"
           onclick="window.print()"
-          style="margin-top: 16px"
+          style="margin-top: 5px"
         >
           Print Result
         </button>
