--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,5 +1,8 @@
 body {
-    background-color: #f3fafa;
-    background-image: url("https://www.transparenttextures.com/patterns/45-degree-fabric-light.png");
-    /* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */
-  }
+  background-color: #f3fafa;
+  background-image: url("https://www.transparenttextures.com/patterns/45-degree-fabric-light.png");
+  /* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */
+}
+body::-webkit-scrollbar {
+  display: none;
+}
