--- a/views/student.ejs
+++ b/views/student.ejs
@@ -1,8 +1,8 @@
 <%- include('partials/header'); -%>
     <main>
       <div class="form-style">
-        <img src="/assets/result.png"  alt="home-image" class="center" />
-        <form method="post" name="myForm"  action="/result" >
+        <img src="/assets/result.png" alt="home-image" class="center" />
+        <form method="post" action="/result" id="search-form">
           <div class="form-group">
             <label for="inputEnrolment">Enrolment No.</label>
             <input
@@ -11,24 +11,36 @@
               name="enrolment_no"
               aria-describedby="emailHelp"
               required
-            
             />
             <small class="form-text text-muted"
               >Search your results by entering your enrolment no.</small
             >
           </div>
-          
-        
-          <button type="submit" name="fname" class="btn btn-dark" style="width: 125px">
+          <button type="submit" class="btn btn-dark" style="width: 125px">
             Search
           </button>
         </form>
+        <div class="alert alert-warning alert-dismissible fade show" style="margin-top: 20px;"  id="loginAlert">
+          <p style="text-align: center; margin: auto;">Oops! No data Found</p>
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
       </div>
+      
     </main>
     <script>
-      if(window.history.replaceState){
-        window.history.replaceState(null,null,window.location.href);
-      }
+      const err = document.getElementById('loginAlert');
+       err.style.display = "none";
+       const urlParams = new URLSearchParams(window.location.search);
+       const myParam = urlParams.get('error');
+       if(myParam == "Oops! No data available") 
+        err.style.display = "block";
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script>
   </body>
 </html>
