add error modal message

--- a/public/css/modal.css
+++ b/public/css/modal.css
@@ -12,6 +12,18 @@
   background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
 }
 
+.error-modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 25px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+}
+
 /* Modal Content */
 .modal-content {
   position: relative;
@@ -35,6 +47,15 @@
   border: 1px solid #888;
   width: 40%;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  -webkit-animation-name: animatetop;
+  -webkit-animation-duration: 0.4s;
+  animation-name: animatetop;
+  animation-duration: 0.4s;
+}
+.error-modal-content {
+  margin-top: 20px;
+  width: 40%;
+  margin: auto;
   -webkit-animation-name: animatetop;
   -webkit-animation-duration: 0.4s;
   animation-name: animatetop;
@@ -88,5 +109,3 @@
 .modal-body {
   padding: 2px 16px;
 }
-
-
