--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -2,7 +2,7 @@
     <main>
       <div class="form-style">
         <img src="/assets/admin.png" alt="home-image" class="center" />
-        <form method="post">
+        <form method="post" autocomplete="off">
           <div class="form-group">
             <label for="inputEnrolment">User Name.</label>
             <input
