--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -34,7 +34,7 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-light bg-light">
+      <nav class="navbar fixed-top navbar-light bg-light">
         <div class="navbar-header">
           <p class="navbar-brand">DASHBOARD</p>
         </div>
@@ -67,7 +67,7 @@
         </div>
       </nav>
    </header>
-    <section>
+    <section style="margin-top: 150px;">
       <div class="feature-section row">
         <div class="admin-features col-md-12 col-lg-4">
       <div class="card" style="width: 18rem;">
