--- a/views/student.ejs
+++ b/views/student.ejs
@@ -2,7 +2,7 @@
     <main>
       <div class="form-style">
         <img src="/assets/result.png" alt="home-image" class="center" />
-        <form method="post" action="/result" id="search-form">
+        <form method="post" action="/result" id="search-form" autocomplete="off">
           <div class="form-group">
             <label for="inputEnrolment">Enrolment No.</label>
             <input
