--- a/views/result.ejs
+++ b/views/result.ejs
@@ -29,7 +29,7 @@
 
   <body>
     <div class="form-style">
-      <form method="post" id="result-form">
+      <form method="post" id="result-form" autocomplete="off">
         <div class="form-group row">
           <label class="col-sm-2 col-form-label label-style"
             >Select Class Id</label
@@ -72,7 +72,12 @@
             >
               Add Result
             </button>
-            <a href="/dashboard"  class="btn btn-outline-dark"  style="width: 125px; margin-top: 25px;margin-left: 5px;" >Go Back</a>
+            <a
+              href="/dashboard"
+              class="btn btn-outline-dark"
+              style="width: 125px; margin-top: 25px; margin-left: 5px"
+              >Go Back</a
+            >
           </div>
         </div>
       </form>
@@ -151,7 +156,40 @@
         </div>
       </div>
     </div>
-
+    <div id="errorModal" class="error-modal">
+      <!-- Modal content -->
+      <div
+        class="error-modal-content alert alert-warning alert-dismissible fade show shadow-sm"
+        id="loginAlert"
+      >
+        <p id="errorMessage" style="text-align: center; margin: auto">
+          Could not create, add valid values!
+        </p>
+        <button
+          id="closeModal"
+          type="button"
+          class="close"
+          style="font-size: 1.5rem"
+          data-dismiss="alert"
+          aria-label="Close"
+        >
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+    </div>
+    <script>
+      const btn = document.getElementById("closeModal");
+      btn.onclick = function () {
+        document.getElementById("errorModal").style.display = "none";
+      };
+      const err = document.getElementById("errorModal");
+      err.style.display = "none";
+      const urlParams = new URLSearchParams(window.location.search);
+      const myParam = urlParams.get("error");
+      document.getElementById("errorMessage").innerHTML = myParam;
+      if(myParam != null)
+      err.style.display = "block";
+    </script>
     <script
       src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
