--- a/views/class.ejs
+++ b/views/class.ejs
@@ -26,7 +26,7 @@
 
   <body>
     <div class="form-style">
-      <form method="post" autocomplete="off">
+      <form method="post">
         <div class="form-group row">
           <label class="col-sm-2 col-form-label label-style"
             >Enter Class id:
