--- a/views/result.ejs
+++ b/views/result.ejs
@@ -201,10 +201,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fomantic-ui/2.8.8/semantic.min.js"></script>
     <script src="/js/resultDashboard.js"></script>
     <script src="/js/errorMessage.js"></script>
-    <script
-      src="https://kit.fontawesome.com/05332581fb.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://kit.fontawesome.com/2bcba4bb6a.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bs-custom-file-input/dist/bs-custom-file-input.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bs-custom-file-input/dist/bs-custom-file-input.min.js"></script>
   </body>
