--- a/views/students.ejs
+++ b/views/students.ejs
@@ -183,10 +183,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <script
-      src="https://kit.fontawesome.com/05332581fb.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://kit.fontawesome.com/2bcba4bb6a.js" crossorigin="anonymous"></script>
     <script
       src="http://code.jquery.com/jquery-3.3.1.min.js"
       integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
